# complain-service

./: .env.example  README.md  complaints.db  pyproject.toml  start.sh
src/: main.py
src/api/: __init__.py  openai_client.py  router.py  sentiment_client.py
src/common/constants/: __init__.py  open_ai_constants.py
src/common/enums/: __init__.py  complaint_category.py  sentiments_type.py
src/config/: settings.py
src/core/common/constants/: __init__.py  open_ai_constants.py
src/core/common/enums/: __init__.py
src/core/models/: complaint.py  subscriber.py
src/core/services/: complaint_services.py  openai_client.py  sentiment_client.py  telegram_notyfication.py
src/models/: complaint.py
src/repositories/: complaint_repository.py  session.py  subscriber_repository.py
src/repository/: complaint_repository.py  session.py
src/services/: complaint_services.py  complaint_tone.py
src/shemas/: complaint_shema.py
